@@ -36,9 +36,13 @@ class ApiContactController extends ApiController
                 return $this->respondInvalidQuery();
             }
 
-            return ContactResource::collection($contacts)->additional(['meta' => [
+            $collection = $this->applyWithParameter($contacts, $this->getWithParameter());
+
+            return $collection->additional([
+                'meta' => [
                     'query' => $needle,
-                ]]);
+                ],
+            ]);
         }
 
         try {
@@ -49,7 +53,9 @@ class ApiContactController extends ApiController
             return $this->respondInvalidQuery();
         }
 
-        return ContactResource::collection($contacts);
+        $collection = $this->applyWithParameter($contacts, $this->getWithParameter());
+
+        return $collection;
     }
 
     /**
@@ -358,5 +364,19 @@ class ApiContactController extends ApiController
         $contact->delete();
 
         return $this->respondObjectDeleted($contact->id);
+    }
+
+    /**
+     * Apply the `?with=` parameter.
+     * @param  Collection $contacts
+     * @return Collection
+     */
+    private function applyWithParameter($contacts, string $parameter = null)
+    {
+        if ($parameter == 'contactfields') {
+            return ContactWithContactFieldsResource::collection($contacts);
+        }
+
+        return ContactResource::collection($contacts);
     }
 }
