@@ -18,6 +18,7 @@ class ContactWithContactFields extends Resource
         return [
             'id' => $this->id,
             'object' => 'contact',
+            'hash_id' => $this->hashId(),
             'first_name' => $this->first_name,
             'last_name' => $this->last_name,
             'gender' => $this->gender->name,
@@ -25,23 +26,25 @@ class ContactWithContactFields extends Resource
             'is_dead' => (bool) $this->is_dead,
             'last_called' => $this->when(! $this->is_partial, $this->getLastCalled()),
             'last_activity_together' => $this->when(! $this->is_partial, $this->getLastActivityDate()),
+            'stay_in_touch_frequency' => $this->when(! $this->is_partial, $this->stay_in_touch_frequency),
+            'stay_in_touch_trigger_date' => $this->when(! $this->is_partial, (is_null($this->stay_in_touch_trigger_date) ? null : $this->stay_in_touch_trigger_date->format(config('api.timestamp_format')))),
             'information' => [
                 'relationships' => $this->when(! $this->is_partial, [
                     'love' => [
-                        'total' => $this->getRelationshipsByRelationshipTypeGroup('love')->count(),
-                        'contacts' => Contact::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('love')),
+                        'total' => (is_null($this->getRelationshipsByRelationshipTypeGroup('love')) ? 0 : $this->getRelationshipsByRelationshipTypeGroup('love')->count()),
+                        'contacts' => (is_null($this->getRelationshipsByRelationshipTypeGroup('love')) ? null : self::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('love'))),
                     ],
                     'family' => [
-                        'total' => $this->getRelationshipsByRelationshipTypeGroup('family')->count(),
-                        'contacts' => Contact::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('family')),
+                        'total' => (is_null($this->getRelationshipsByRelationshipTypeGroup('family')) ? 0 : $this->getRelationshipsByRelationshipTypeGroup('family')->count()),
+                        'contacts' => (is_null($this->getRelationshipsByRelationshipTypeGroup('family')) ? null : self::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('family'))),
                     ],
                     'friend' => [
-                        'total' => $this->getRelationshipsByRelationshipTypeGroup('friend')->count(),
-                        'contacts' => Contact::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('friend')),
+                        'total' => (is_null($this->getRelationshipsByRelationshipTypeGroup('friend')) ? 0 : $this->getRelationshipsByRelationshipTypeGroup('friend')->count()),
+                        'contacts' => (is_null($this->getRelationshipsByRelationshipTypeGroup('friend')) ? null : self::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('friend'))),
                     ],
                     'work' => [
-                        'total' => $this->getRelationshipsByRelationshipTypeGroup('work')->count(),
-                        'contacts' => Contact::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('work')),
+                        'total' => (is_null($this->getRelationshipsByRelationshipTypeGroup('work')) ? 0 : $this->getRelationshipsByRelationshipTypeGroup('work')->count()),
+                        'contacts' => (is_null($this->getRelationshipsByRelationshipTypeGroup('work')) ? null : self::translateForAPI($this->getRelationshipsByRelationshipTypeGroup('work'))),
                     ],
                 ]),
                 'dates' => [
