@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources\Contact;
+
+use Illuminate\Http\Resources\Json\ResourceCollection;
+
+class ContactWithContactFieldsCollection extends ResourceCollection
+{
+    /**
+     * Transform the resource collection into an array.
+     *
+     * @param  \Illuminate\Http\Request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'data' => $this->collection,
+            'links' => [
+                'self' => 'link-value',
+            ],
+        ];
+    }
+}
